force-app/main/default/objects/RTL_Campaign_Member_History_detail__c/RTL_Campaign_Member_History_detail__c.object-meta.xml
<CustomObject>
    <label>Campaign Member History detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Member History detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member History details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>