force-app/main/default/objects/RTL_Campaign_Member_History_detail__c/fields/Campaign_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Campaign_EndDate__c</fullName>
    <formula>RTL_Campaign_Member_History__r.RTL_Campaign__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign EndDate</label>
    <type>Date</type>
</CustomField>