force-app/main/default/objects/RTL_Campaign_Member_History_detail__c/fields/RTL_Campaign_Member_History__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Member_History__c</fullName>
    <label>Campaign Member History</label>
    <referenceTo>RTL_Campaign_Member_History__c</referenceTo>
    <relationshipLabel>Campaign Member History details</relationshipLabel>
    <relationshipName>Campaign_Member_History_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>