force-app/main/default/objects/RTL_Campaign_Member_History_detail__c/fields/RTL_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Field_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>